--- a/.gitignore
+++ b/.gitignore
@@ -361,5 +361,6 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+.idea/
 
 # End of https://mrkandreev.name/snippets/gitignore-generator/#Python,PyCharm,PyCharm+all,PyCharm+iml
